# basic_ocr

./: .gitignore  CMakeLists.txt  README.md  compile.sh  model_3000.nn
JAVA_TEMPLATE_MATCHING_OCR_SRC/src/guiOperations/: IWriteFace.java
JAVA_TEMPLATE_MATCHING_OCR_SRC/src/guiOperations/rw/: ReadWrite.java  Writer.java
JAVA_TEMPLATE_MATCHING_OCR_SRC/src/guiOperations/segment/: Projection.java
JAVA_TEMPLATE_MATCHING_OCR_SRC/src/guiOperations/window/: Window.java
JAVA_TEMPLATE_MATCHING_OCR_SRC/src/main/: Main.java
docs/: neural_network.drawio
include/: debugOCR.hpp  modelProp.hpp  opRandomMath.hpp
include/model/: loadDataset.hpp  neuralNetwork.hpp  segment.hpp
include/opPoint/: bmpReader.hpp  brightnessOperation.hpp  pointOperation.hpp  thresholdOperation.hpp
src/: main.cpp  opRandomMath.cpp
src/guiOperations/: IReadFace.java
src/guiOperations/pointOperation/: HistogramEqualization.java  Threshold.java
src/guiOperations/rw/: Reader.java
src/model/: loadDataset.cpp  neuralNetwork.cpp  segment.cpp
src/opPoint/: bmpReader.cpp  brightnessOperation.cpp  thresholdOperation.cpp
